--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"eslint": "^7.4.0",
 		"eslint-plugin-vue": "^6.2.2",
 		"node-sass": "^4.14.1",
-		"vue-template-compiler": "^2.6.11"
+		"vue-template-compiler": "^2.6.11",
+		"axios": "0.20.0"
 	},
 	"eslintConfig": {
 		"root": true,
