--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 	"dependencies": {
 		"azure-maps-control": "^2.0.31",
 		"core-js": "^3.6.5",
-		"vue": "^2.6.11"
+		"vue": "^2.6.11",
+		"vue-router": "^3.4.3"
 	},
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "^4.4.6",
